--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  margin-top: 80px;  /* ترك مساحة تحت الهيدر لتجنب تغطية المحتوى */
+  margin-top: 80px; 
 }
 
 
@@ -84,10 +84,17 @@ border:  2px solid white;
 background-color: rgba(35, 47, 62, 0.7);  
 padding: 15px 100px;  
 border-radius: 5px; 
+ 
+}
+.active-link{
+   text-decoration: none;
+  color:  rgb(255, 250, 250);  
+  font-weight: bolder;
+  font-size: 28px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .nav__toggle {
-
      display: block;
     cursor: pointer;
       margin-right: 20px;  
@@ -105,18 +112,17 @@ border-radius: 5px;
 .nav__toggle img{
  background-color: black;
 }
-
- .nav__menu {
-    display: none;
-    position: absolute;
-    top: 60px;  
-    right: 0;
-    height: 700px;
-    background-color: rgba(35, 47, 62, 0.7);         ;
-    width: 90%;
-     line-height: 85px;
-     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-     order: 3;
+.nav__menu {
+  display: none;
+  position: absolute;
+  top: 60px;  
+  right: 0;
+  height: 700px;
+  background-color: #1d1c60; 
+  box-shadow: 0 4px 7px rgba(0, 0, 0, 0.1);
+  width: 90%;
+  line-height: 85px;
+  order: 3;
 }
 
  .nav__menu.active {
@@ -126,13 +132,19 @@ border-radius: 5px;
  .nav__list {
     flex-direction: column;
     align-items: center;
+    
 }
 
 .nav__item {
     margin: 10px 0;
+    
+
 
 }
+
+ 
 .nav {
+  
     display: flex;
     justify-content: space-between; 
      align-items: center;
@@ -144,7 +156,8 @@ border-radius: 5px;
 }
 .nav__item {
     position: relative;
-    padding: 10px 0;
+    padding: 10px 0;   
+
  }
 
 .nav__item::after {
@@ -170,7 +183,7 @@ border-radius: 5px;
 /*sec memona css + media*/
 
 .sec-1 {
-  margin: 0%;
+   margin: 0%;
   padding: 20px;
   display: inline-flex;
 }
@@ -234,76 +247,320 @@ border-radius: 5px;
   border-radius: 100px 100px 100px 100px;
   z-index: 1;
 }
-/*sec safa*/
  
-/*sec memona css + media*/
-.sec-1 {
-  margin: 0%;
-  padding: 20px;
-  display: inline-flex;
+/*sec safa*/
+.section3 {
+  width: 100%;
+  margin-top: 100px;
+  font-style: normal;
+   font-family: Arial, Helvetica, sans-serif;
+   height: 120px;}
+
+  .section3   h3{
+    font-size: 2rem;
+    text-align: center;
+  }
+
+  .section3   p{
+    font-size: .9rem;
+     padding: 0px 450px;
+    text-align: center;
+    color: hsl(229, 8%, 60%);
+  }
+  @media screen and (max-width: 768px) {
+    .section3 {
+      width: 100%;
+      margin-top: 100px;
+      font-style: normal;
+       font-family: Arial, Helvetica, sans-serif;
+       height: 120px;}
+    
+      .section3   h3{
+        font-size: 2rem;
+        text-align: center;
+      }
+    
+      .section3   p{
+        font-size: .9rem;
+         padding: 0px 50px;
+        text-align: center;
+        color: hsl(229, 8%, 60%);
+      }
+    
+  } 
+
+  .features {
+    font-family: Arial, Helvetica, sans-serif;
+margin-top: 30px;
+    display: flex;
+    justify-content: space-around;
+    gap: 5px;
+  }
+  
+  .feature {
+    position: relative;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    padding-bottom: 10px;
+  }
+  
+  .feature::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: red;
+    transition: height 0.3s ease;
+  }
+  
+   
+  .feature.active::after {
+    height: 6px;
+  }
+  
+   .feature:active::after {
+    height: 2px;
+  }
+  
+   .feature:active {
+    color: red;
+  }
+  
+  @media (max-width: 768px) {
+    .features {
+      margin-top: 80px;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;  
+    }
+  }
+    
+.section4 {
+  display: flex;
+  align-items: center;  
+  gap: 20px;  
 }
 
-.img-1 {
-  display: inline-flex;
-  width: 840px;
-  height: 630px;
-  padding-top: 200px;
+.part1, .part2 {
+  flex: 1;
+}
+
+.part2 {
   position: relative;
 }
-.pr-1 {
-  margin: 0%;
-  padding-top: 255px;
-  padding-left: 120px;
-  font-size: 60px;
-  font-family: "Roboto", sans-serif;
+
+.blue-overlay {
+  position: absolute;
+  top: 170px;
+  left: 0; 
+  width: 90%;
+  height: 350px; 
+  background-color: hsl(231, 69%, 60%);
+  border-radius: 0 80px 150px 0; 
+  z-index: -1;  
+  margin-bottom: -30px;  
 }
-.pr-2 {
-  padding-left: 120px;
-  color: hsl(229, 8%, 60%);
-  font-size: 19x;
+.img8 { top: 70px;
+  margin-left: 60px;
+  width: 88%;
+  height: 370px;
+  position: relative;
+   z-index: 1;  
+  margin-bottom: -30px; 
 }
-.bu {
-  padding: 15px 30px;
-  border-radius: 7px;
-  border: 0;
-  box-shadow: 0px 0px 10px 0px rgb(174, 174, 176);
+
+.part1{
+  margin-top: 100px;
+  font-family: Arial, Helvetica, sans-serif;
+  
 }
-.bu1 {
-  margin-left: 120px;
+.part1 h3{
+  font-size: 1.5rem;
+  margin-left: 20px;
+
+}
+.part1 p{
+  font-size: 1rem;
+  padding: 0px 320px 0px 20px;
+   color: hsl(229, 8%, 60%);
+   line-height: 2cap;
+}
+.part1 button{
+  margin-left: 20px;
+  margin-top: 30px;
   background-color: hsl(231, 69%, 60%);
   color: white;
-  margin-right: 9px;
-}
-.bu2 {
-  background-color: rgb(246, 246, 247);
-  color: black;
-}
-.img-container {
-  position: relative;
-  width: 800px;
-  height: 700px;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+ }
+ @media (max-width: 768px) {
+  .part1 button{
+  display: none;
+   }
+  
+  .section4 {
+    margin-top: 70px;
+    flex-direction: column; 
+    align-items: center;
+    gap: 20px;
+  }
+
+  .img8 {
+    top: 0;
+    margin-left:44px;
+    margin-right: 2px;
+    margin-bottom: 20px;  
+    width: 90%; 
+    height: auto;
+  }
+
+  .part1 {
+    margin-top: 70px;
+    text-align: center; 
+  }
+
+  .part1 h3 {
+    margin-left: 0; 
+  }
+
+  .part1 p {
+    padding: 0 20px;  
+  }
+
+  .part1 button {
+    margin: 20px auto;  
+  }
+
+  .blue-overlay {
+    width: 85%; 
+    height: 250px; 
+    border-radius: 0 0px 100px 0; 
+    top: 50px; 
+    margin-right: 50px;
+  }
 }
 
-.img-1 {
-  position: relative;
-  width: 840px;
-  height: 630px;
-  padding-top: 200px;
-  z-index: 2;
+
+ p{
+  color: hsl(229, 8%, 60%);} 
+
+ h1,h2,h3,h4,h5,h6{
+    color: hsl(229, 31%, 21%);} 
+
+    .section3-c {
+      width: 100%;
+      margin-top: 250px;
+      font-style: normal;
+      font-family: Arial, Helvetica, sans-serif;
+      height: 120px;
+    }
+    
+    .section3-c h3 {
+      font-size: 2rem;
+      text-align: center;
+    }
+ 
+ 
+    .section3-c    p{
+      font-size: .9rem;
+       padding: 0px 450px 0px 450px;
+      text-align: center;
+      color: hsl(229, 8%, 60%);
+    }
+    
+    .faq {
+      margin: auto;
+      width: 60%;
+       border-bottom: 2px solid #ccc; 
+      text-align: left; 
+      padding: 10px 0;
+      margin-top: 20px;
+    }
+    
+    .faq-answer {
+      display: none; 
+      font-size: 1rem; 
+    }
+     
+    .faq-answer p {
+       
+      font-size: .8rem;
+       width: 70%;
+       height: 40PX;
+       line-height: 20px;
+margin:  50PX ;   
+ padding-left: 20px;
+ margin-left: 40px;
+       display: inline;
+      white-space: nowrap;
+      text-align: left; 
+    }
+    
+    
+    .faq input[type="checkbox"] {
+      display: none;  
+    }
+    
+    .faq label {
+      cursor: pointer;
+      font-size: 1rem;
+      display: flex;
+      justify-content: space-between; 
+      align-items: center;
+      width: 100%;
+    }
+    
+    .arrow {
+      font-size: 1.5rem;
+      color: green;  
+      transition: transform 0.3s, color 0.3s;  
+      transform: rotate(90deg);  
+    }
+    
+    .faq input[type="checkbox"]:checked + label .arrow {
+      transform: rotate(270deg);  
+      color: red; 
+    }
+    
+    .faq input[type="checkbox"]:checked + label + .faq-answer {
+      display: block; 
+    }
+ 
+ @media (max-width: 768px) {
+  .section3-c {
+    margin-top: 90px;
+  }
+  .section3-c p {
+    padding: 0px 20px; 
+  }
+
+  .faq {
+    width: 90%;   
+    margin-top: 15px;
+  }
+
+  .faq-answer p {
+    width: 100%;   
+    margin-left: 0;  
+    padding-left: 10px;   
+    padding-right: 10px;  
+    word-wrap: break-word; 
+    overflow-wrap: break-word;  
+    white-space: normal;   
+  }
+    .arrow {
+    font-size: 1.2rem; 
+  }
+  
+  .faq label {
+    font-size: 1rem;
+  }
 }
 
-.background-shape {
-  position: absolute;
-  bottom: -50px;
-  right: -50px;
-  width: 570px;
-  height: 370px;
-  background-color: hsl(231, 69%, 60%);
-  border-radius: 100px 100px 100px 100px;
-  z-index: 1;
-}
 
-
-/*sec safa*/
-
+ 
 /*sec memona css + media*/
